--- a/style/main.css
+++ b/style/main.css
@@ -35,10 +35,12 @@ header nav a{
     text-decoration: none;
     color: #aaaaaa;
     margin-right: 10px;
+    margin-left: 5px;;
+    font-size: 20px;
 }
 
 header nav a:hover{
-    color: #ffffff;
+    color: var(--vermelho);
 }
 
 main .filme-principal{
@@ -100,4 +102,5 @@ main .filme-principal .titulo{
 
 .carousel-filmes{
     margin-top: 5px;
+    
 }
