--- a/style/main.css
+++ b/style/main.css
@@ -45,7 +45,7 @@ header nav a:hover{
 
 main .filme-principal{
     font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url(/img/img-capa.jpg);
+    background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url(/img/img-capa2.jpg);
     height: 400px;
     background-size: cover;
     display: flex;
