--- a/style/main.css
+++ b/style/main.css
@@ -55,7 +55,7 @@ main .filme-principal{
 }
 
 main .filme-principal .descricao{
-    margin-top: 10px;
+    margin-top: 15px;
     margin-bottom: 40px;
 }
 
@@ -71,6 +71,7 @@ main .filme-principal .titulo{
    color: #ffffff;
    padding: 15px 30px;
    margin-right: 15px;
+   margin-bottom: 25px;
    font-size: 12px;
    cursor: pointer;
    transition: .3s ease all;
